--- a/js/packages/dys-ui/src/assets/main.css
+++ b/js/packages/dys-ui/src/assets/main.css
@@ -4,39 +4,57 @@
 
 @layer base {
   :root {
+    /* Default background color of <body /> */
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 221.2 83.2% 53.3%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
+    /* Muted backgrounds such as <TabsList />, <Skeleton /> and <Switch /> */
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
+    /* Background color for <Card /> */
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    /* Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover /> */
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    /* Primary colors for <Button /> */
+    --primary: 221.2 83.2% 53.3%;
+    --primary-foreground: 210 40% 98%;
+
+    /* Secondary colors for <Button /> */
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    /* Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem> */
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
+    /* Used for destructive actions such as <Button variant="destructive"> */
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
+    /* --warning: 38 92% 50%;
+    --warning-foreground: 48 96% 89%; */
+
+    /* Default border color */
     --border: 214.3 31.8% 91.4%;
+    /* Border color for inputs such as <Input />, <Select />, <Textarea /> */
     --input: 214.3 31.8% 91.4%;
+    /* Used for focus ring */
     --ring: 221.2 83.2% 53.3%;
+    /* Border radius for card, input and buttons */
     --radius: 0.5rem;
   }
 
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
 
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
@@ -50,14 +68,14 @@
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
+    /* --warning: 48 96% 89%;
+    --warning-foreground: 38 92% 50%; */
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
