--- a/js/packages/oapi-todo/src/assets/main.css
+++ b/js/packages/oapi-todo/src/assets/main.css
@@ -25,13 +25,14 @@
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    /* Used for destructive actions such as <Button variant="destructive"> */
+    --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 0 85.7% 99%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
-    --radius: 0.5rem;
+    --radius: 0.25rem;
   }
 
   .dark {
@@ -56,8 +57,8 @@
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+    /* --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 0 85.7% 99%; */
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
