--- a/js/packages/dys-ui/src/assets/main.css
+++ b/js/packages/dys-ui/src/assets/main.css
@@ -42,8 +42,9 @@
     --input: 214.3 31.8% 91.4%;
     /* Used for focus ring */
     --ring: 221.2 83.2% 53.3%;
+
     /* Border radius for card, input and buttons */
-    --radius: 0.25rem;
+    --radius: 6px;
   }
 
   .dark {
